--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,12 +8,7 @@ on:
 
 jobs:
   tauri-release:
-    strategy:
-      fail-fast: false
-      matrix:
-        platform: [macos-latest, ubuntu-latest, windows-latest]
-
-    runs-on: ${{ matrix.platform }}
+    runs-on: windows-latest
 
     steps:
       - name: Checkout repository
@@ -31,18 +26,6 @@ jobs:
       - name: Cache Rust build
         uses: Swatinem/rust-cache@v2
 
-      - name: Install Linux dependencies
-        if: matrix.platform == 'ubuntu-latest'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libwebkit2gtk-4.1-dev \
-            build-essential \
-            libssl-dev \
-            libgtk-3-dev \
-            libayatana-appindicator3-dev \
-            librsvg2-dev
-
       - name: Install JS dependencies
         run: npm ci
 
@@ -57,3 +40,4 @@ jobs:
           releaseBody: "Automated release for RLS Installer."
           releaseDraft: false
           prerelease: false
+          includeRelease: true
